@@ -81,9 +81,6 @@ protected:
 private:
   /// Underlying I/O handle.
   ACE_HANDLE handle_;
-
-  /// Cache the process ID.
-  static pid_t pid_;
 };
 
 ACE_END_VERSIONED_NAMESPACE_DECL
